--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 
          <h3 id = "shipFilePath"></h3>
          <button id="shipFilePathButton">Click here</button>
+         <button id="testcpphh">TEST C++</button>
          <script src = "./view.js" ></script>
       </div>
    </body>
