--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
    <head>
       <meta charset = "UTF-8">
       <title>Hello World!</title>
+      <link rel ="stylesheet" href="styles.css">
    </head>
    
    <body>
@@ -22,6 +23,12 @@
          <h3 id = "shipFilePath"></h3>
          <button id="shipFilePathButton">Click here</button>
          <button id="testcpphh">TEST C++</button>
+
+         <ol id="demo"></ol>
+         <button id="createList">Make list</button>
+         
+
+
          <script src = "./view.js" ></script>
       </div>
    </body>
