--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
          <h3 id = "click-counter"></h3>
          <button class = "btn">Click here</button>
          <form>
-
             <input type="text" id="logText" name="fname"><br>
             <button id="logButton">Click here</button>
          </form>
@@ -26,6 +25,11 @@
 
          <ol id="demo"></ol>
          <button id="createList">Make list</button>
+         <button onclick="location.href='balancePage.html'" type="button">
+            BALANCE</button>
+         <button onclick="location.href='load.html'" type="button">
+            LOAD/UNLOAD</button>
+         
          
 
 
