should be working

--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
    <body>
       <div class = "container">
          <h1>Shipping Container Software</h1>
-         <h3 id = "click-counter"></h3>
-         <button class = "btn">Click here</button>
+         <!-- <h3 id = "click-counter"></h3>
+         <button class = "btn">Click here</button> -->
          <form>
             <input type="text" id="logText" name="fname"><br>
-            <button id="logButton">Click here</button>
+            <button id="logButton">ENTER LOG TEXT</button>
          </form>
 
          <h3>Ship Manifest in Electron</h3>
