lots of updates

--- a/load_unload.html
+++ b/load_unload.html
@@ -9,14 +9,14 @@
    <body>
       <div class = "hi">
 
-         <button onclick="location.href='index.html'" type="button">
+         <button  class = "button" onclick="location.href='index.html'" type="button">
             GO BACK TO HOME</button>
-        <button id="SUMBIT_UNLOAD">Select Container to LOAD</button>
-        <button id="ShowGrid">Show Grid</button>
+         <!--<button id="SUMBIT_UNLOAD">Select Container to LOAD</button>
+       <button id="ShowGrid">Show Grid</button> -->
         <h1 id = "instructText"> </h1>
         <ul id="demo"></ul>
-        <button id="createList">Show Containers</button>
-        <button id= "submitList">Submit List of Containers and Move on</button>
+        <!--<button id="createList">Show Containers</button>-->
+        <button  class = "button" id= "submitList">Submit List of Containers and Move on</button>
       
          
 
